# matd

./: Makefile  README.md
data/float_center_proto2/: file_001.txt
data/float_center_proto2_p1/: file_001.txt
data/init_proto2/: file_001.txt
data/init_proto2_board2/: file_001.txt
data/pos_x_move_proto2/: file_002.txt  file_003.txt  file_004.txt  file_007.txt  file_009.txt  file_010.txt  file_011.txt  file_012.txt  file_013.txt  file_015.txt  file_017.txt  file_020.txt  file_021.txt  file_024.txt  file_025.txt  file_026.txt  file_028.txt  file_031.txt  file_032.txt  file_033.txt  file_034.txt  file_035.txt  file_036.txt  file_037.txt  file_038.txt  file_039.txt  file_040.txt  file_043.txt  file_046.txt  file_047.txt  file_049.txt  file_051.txt  file_052.txt  file_054.txt  file_057.txt  file_058.txt  file_060.txt  file_061.txt  file_072.txt  file_073.txt  (+61 more)
data/pos_xyz_move_proto2/: file_003.txt  file_006.txt  file_009.txt  file_010.txt  file_013.txt  file_015.txt  file_018.txt  file_020.txt  file_021.txt  file_022.txt  file_023.txt  file_025.txt  file_026.txt  file_029.txt  file_032.txt  file_037.txt  file_043.txt  file_048.txt  file_049.txt  file_050.txt  (+181 more)
fpga/: Makefile
linux/: zynq-snickerdoodle-black.dts  zynq_snickerdoodle_black_defconfig
matlab/: .#conv_phases_csv_proto2.m  calc_field_phases.m  conv_phases_ani.m  conv_phases_ani_avg.m  conv_phases_ani_proto2.m  conv_phases_csv.m  conv_phases_csv_proto2.m  conv_to_ph.m  notes_proto2.txt  phases.m  read_raw_ani.m  read_raw_csv.m
sw/: CMakeLists.txt  GCC.cmake  GCC_native.cmake
sw/cli/: CMakeLists.txt  access_phase_ctrl.cpp  access_pwm_gen.cpp  cli_common.cpp  cli_common.h  disable_array.cpp  load_array.cpp  matd.cpp  matd.h  move_ph_ctrl.cpp  phase_ctrl.h  pwm_gen.h  set_pwm_out.cpp
(+107 files in other folders)
